--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,11 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Basic Template</title>
 
+	<!-- src="resources/sap-ui-core.js" -->
 	<script id="sap-ui-bootstrap"
-			src="resources/sap-ui-core.js"
+			src="https://openui5.hana.ondemand.com/1.82.1/resources/sap-ui-core.js"
 			data-sap-ui-theme="sap_fiori_3"
 			data-sap-ui-resourceroots='{
-				"sap.ui.demo.basicTemplate": "./"
+				"cmjs": "./"
 			}'
 			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
 			data-sap-ui-compatVersion="edge"
@@ -19,6 +20,6 @@
 </head>
 
 <body class="sapUiBody">
-	<div data-sap-ui-component data-name="sap.ui.demo.basicTemplate" data-id="container" data-settings='{"id" : "basicTemplate"}'></div>
+	<div data-sap-ui-component data-name="cmjs" data-id="container" data-settings='{"id" : "basicTemplate"}'></div>
 </body>
 </html>
