--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Basic Template</title>
+	<title>CMJS Admin</title>
 
-	<!-- src="resources/sap-ui-core.js" -->
+	<!-- src="https://openui5.hana.ondemand.com/1.82.1/resources/sap-ui-core.js" -->
 	<script id="sap-ui-bootstrap"
-			src="https://openui5.hana.ondemand.com/1.82.1/resources/sap-ui-core.js"
+			src="resources/sap-ui-core.js"
 			data-sap-ui-theme="sap_fiori_3"
 			data-sap-ui-resourceroots='{
 				"cmjs": "./"
@@ -17,6 +17,7 @@
 			data-sap-ui-async="true"
 			data-sap-ui-frameOptions="trusted">
 	</script>
+	<script src="./tinymce/tinymce.min.js"></script>
 </head>
 
 <body class="sapUiBody">
