--- a/webapp/index.html
+++ b/webapp/index.html
@@ -21,6 +21,6 @@
 </head>
 
 <body class="sapUiBody">
-	<div data-sap-ui-component data-name="cmjs" data-id="container" data-settings='{"id" : "basicTemplate"}'></div>
+	<div data-sap-ui-component data-name="cmjs" data-id="container"></div>
 </body>
 </html>
