--- a/cmjs/admin/index.html
+++ b/cmjs/admin/index.html
@@ -6,8 +6,9 @@
 	<link rel="shortcut icon" href="/admin/favicon.ico" />
 	<title>CMJS Admin</title>
 
-	<script id="sap-ui-bootstrap"
-			src="resources/sap-ui-core.js"
+	<script id="sap-ui-bootstrap" 
+			type="text/javascript" 
+			src="https://openui5.hana.ondemand.com/1.99.0/resources/sap-ui-core.js"			
 			data-sap-ui-theme="sap_fiori_3"
 			data-sap-ui-resourceroots='{
 				"cmjs": "./"
