update node modules

--- a/cmjs/admin/index.html
+++ b/cmjs/admin/index.html
@@ -8,7 +8,7 @@
 
 	<script id="sap-ui-bootstrap" 
 			type="text/javascript" 
-			src="https://openui5.hana.ondemand.com/1.99.0/resources/sap-ui-core.js"			
+			src="/admin/resources/sap-ui-core.js"			
 			data-sap-ui-theme="sap_fiori_3"
 			data-sap-ui-resourceroots='{
 				"cmjs": "./"
